--- a/indefinite_pronouns/index.html
+++ b/indefinite_pronouns/index.html
@@ -495,9 +495,7 @@
               <span class="emoji">🧠</span>
               <span>Indefinite Pronouns – 30-Question Trainer</span>
             </div>
-            <div class="title-sub">
-              One question at a time. If you make a mistake, ❓ shows a Russian explanation. Answer all 30 correctly, then send the result to your teacher.
-            </div>
+
           </div>
           <div class="badge">
             <span class="badge-dot"></span>
@@ -532,20 +530,9 @@
                 </label>
                 <select id="studentGroup">
                   <option value="">Select your group</option>
-                  <option>ОПУ.21А</option>
-                  <option>ПО.22А</option>
-                  <option>ГД.21А</option>
-                  <option>ПО.20А</option>
-                  <option>ОПУ.22.1А</option>
-                  <option>ОПУ.23.1А</option>
-                  <option>ПО.21А</option>
-                  <option>ГД.22.1А</option>
                   <option>ТГ.25А</option>
-                  <option>ОПУ.22.2А</option>
-                  <option>ОПУ.23.2А</option>
-                  <option>ГД.22.2А</option>
-                  <option>ПО.23А</option>
                   <option>ТГ.23.2А</option>
+                  <option>ТГ.23.1А</option>
                   <option>Other</option>
                 </select>
               </div>
@@ -655,7 +642,7 @@
               <span class="icon">📤</span>
               <span>Send your result</span>
             </div>
-            <div class="section-tag">Works only after all 30 questions are correct</div>
+          <div class="section-tag">Works only after all 30 questions are correct</div>
           </div>
           <div class="section-body">
             <div class="submit-row">
@@ -666,7 +653,7 @@
               <div class="status-bar status-idle" id="statusBar">
                 <span class="dot"></span>
                 <span class="status-text">
-                  Finish all questions first, then send. JSON will show how many mistakes you made.
+                  Отвечай на вопросы. Прогресс сохраняется на этом устройстве. После всех 30 вопросов можно отправить результат.
                 </span>
               </div>
             </div>
@@ -695,6 +682,9 @@
 
     const ENTRY_NAME_GROUP = "entry.1921741824"; // Name + group
     const ENTRY_JSON = "entry.1988412302";       // JSON payload
+
+    // === LOCAL STORAGE KEY ===
+    const STORAGE_KEY = "indefinite_trainer_seq_v1";
 
     // === QUESTIONS (30 total) ===
     const questions = [
@@ -916,6 +906,46 @@
       statusBar.querySelector(".status-text").textContent = text;
     }
 
+    // === LOCAL STORAGE HELPERS ===
+    function saveState() {
+      try {
+        const state = {
+          currentIndex,
+          totalWrongAnswers,
+          correctOnFirstTry,
+          currentQuestionWrongTries,
+          finished,
+          results,
+          resultsSent
+        };
+        localStorage.setItem(STORAGE_KEY, JSON.stringify(state));
+      } catch (e) {
+        console.error("Error saving state:", e);
+      }
+    }
+
+    function loadState() {
+      try {
+        const raw = localStorage.getItem(STORAGE_KEY);
+        if (!raw) return;
+        const state = JSON.parse(raw);
+        if (!state || typeof state !== "object") return;
+
+        currentIndex = Number.isInteger(state.currentIndex) ? state.currentIndex : 0;
+        totalWrongAnswers = Number.isInteger(state.totalWrongAnswers) ? state.totalWrongAnswers : 0;
+        correctOnFirstTry = Number.isInteger(state.correctOnFirstTry) ? state.correctOnFirstTry : 0;
+        currentQuestionWrongTries = Number.isInteger(state.currentQuestionWrongTries) ? state.currentQuestionWrongTries : 0;
+        finished = !!state.finished;
+        resultsSent = !!state.resultsSent;
+
+        if (Array.isArray(state.results)) {
+          results.splice(0, results.length, ...state.results);
+        }
+      } catch (e) {
+        console.error("Error loading state:", e);
+      }
+    }
+
     function updateProgress() {
       const total = questions.length;
       const current = Math.min(currentIndex + 1, total);
@@ -936,7 +966,6 @@
       clearFeedback();
 
       if (currentIndex >= questions.length) {
-        // All done
         finished = true;
         progressInner.style.width = "100%";
         questionCounter.textContent = `Question ${questions.length} / ${questions.length}`;
@@ -949,6 +978,7 @@
         if (window.Streak && typeof Streak.correct === "function") {
           Streak.correct();
         }
+        saveState();
         return;
       }
 
@@ -979,7 +1009,7 @@
       });
 
       updateProgress();
-      currentQuestionWrongTries = 0;
+      // currentQuestionWrongTries restored from state; do not reset if reloaded mid-question.
     }
 
     function handleAnswer(selected, btnEl) {
@@ -1020,6 +1050,8 @@
         });
 
         currentIndex += 1;
+        currentQuestionWrongTries = 0;
+        saveState();
 
         setTimeout(() => {
           renderQuestion();
@@ -1039,6 +1071,8 @@
         if (window.Streak && typeof Streak.wrong === "function") {
           Streak.wrong();
         }
+
+        saveState();
       }
     }
 
@@ -1102,6 +1136,7 @@
         });
 
         resultsSent = true;
+        saveState();
         setStatus("status-success", "Готово! Результат отправлен учителю.");
       } catch (err) {
         console.error("Error sending to Google Form:", err);
@@ -1114,12 +1149,21 @@
       sendToGoogleForm();
     });
 
-    // Start
+    // === INIT: load saved state if exists, then render ===
+    loadState();
     renderQuestion();
-    setStatus(
-      "status-idle",
-      "Отвечай на вопросы по очереди. Когда все 30 будут правильные, нажми кнопку, чтобы отправить результат."
-    );
+
+    if (finished) {
+      setStatus(
+        "status-success",
+        "Прогресс восстановлен: все 30 вопросов уже сделаны. Можно отправить результат или продолжить позже."
+      );
+    } else {
+      setStatus(
+        "status-idle",
+        "Отвечай на вопросы по очереди. После нажми кнопку отправить, когда все выполнишь."
+      );
+    }
   </script>
 </body>
 </html>
