--- a/indefinite_pronouns/index.html
+++ b/indefinite_pronouns/index.html
@@ -533,6 +533,8 @@
                   <option>ТГ.25А</option>
                   <option>ТГ.23.2А</option>
                   <option>ТГ.23.1А</option>
+                  <option>ОПУ22.2</option>
+                                <option>ОПУ22.1</option>
                   <option>Other</option>
                 </select>
               </div>
@@ -1167,3 +1169,4 @@
   </script>
 </body>
 </html>
+
